fixed scrollbar bug, fixed sidescrollbar showing in edit mode bug, fixed spamming copy bug & fixed controls not fixed on top.

--- a/css/dark-theme.css
+++ b/css/dark-theme.css
@@ -22,6 +22,7 @@
 body {
 	color: white;
 	background-color: rgb(32, 32, 32);
+	transition: 0s;
 }
 img {
 	filter: invert(0);
@@ -100,5 +101,3 @@ a {
 a:hover {
 	filter: brightness(0.9);
 }
-
-
